//
//  MovieQuizUITests.swift
//  MovieQuizUITests
//
//  Created by Вадим Шишков on 04.05.2023.
//

import XCTest

final class MovieQuizUITests: XCTestCase {
  
  var app: XCUIApplication!
  
  override func setUpWithError() throws {
    try super.setUpWithError()
    
    app = XCUIApplication()
    app.launch()
    
    continueAfterFailure = false
  }
  
  override func tearDownWithError() throws {
    try super.tearDownWithError()
    
    app.terminate()
    app = nil
  }
  
  func testYesButton() throws {
    sleep(3)
    
    let firstPoster = app.images["Poster"]
    let firstPosterData = firstPoster.screenshot().pngRepresentation
    
    app.buttons["Yes"].tap()
    sleep(3)
    
    let indexLabel = app.staticTexts["Index"]
    let secondPoster = app.images["Poster"]
    let secondPosterData = secondPoster.screenshot().pngRepresentation
    
    XCTAssertNotEqual(firstPosterData, secondPosterData)
    XCTAssertEqual(indexLabel.label, "2/10")
  }
  
  func testNoButton() throws {
    sleep(3)
    
    let firstPoster = app.images["Poster"]
    let firstPosterData = firstPoster.screenshot().pngRepresentation
    
    app.buttons["No"].tap()
    sleep(3)
    
    let indexLabel = app.staticTexts["Index"]
    let secondPoster = app.images["Poster"]
    let secondPosterData = secondPoster.screenshot().pngRepresentation
    
    XCTAssertNotEqual(firstPosterData, secondPosterData)
    XCTAssertEqual(indexLabel.label, "2/10")
  }
  
  func testResultAlertPresent() throws {
    sleep(2)
    
    for _ in 1...10 {
      app.buttons["Yes"].tap()
      sleep(2)
    }
    
    let alert = app.alerts["Alert"]
    
    XCTAssertTrue(alert.exists)
    XCTAssertEqual(alert.label, "Этот раунд окончен!")
    XCTAssertEqual(alert.buttons.firstMatch.label, "Сыграть еще раз")
  }
  
  func testResultAlertDismiss() throws {
    sleep(2)
    
    for _ in 1...10 {
      app.buttons["Yes"].tap()
      sleep(2)
    }
    
    let alert = app.alerts["Alert"]
    alert.buttons.firstMatch.tap()
    sleep(1)
    
    let labelIndex = app.staticTexts["Index"]
    
    XCTAssertFalse(alert.exists)
    XCTAssertEqual(labelIndex.label, "1/10")
  }
}
